--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "pizzeria",
   "version": "0.1.0",
   "private": true,
-  "main": "public/electron.js",
+  "main": "public/electron.ts",
+  "homepage": "./",
   "dependencies": {
     "@headlessui/react": "^1.7.4",
     "@reduxjs/toolkit": "^1.9.0",
@@ -17,6 +18,7 @@
     "classnames": "^2.3.2",
     "cross-env": "^7.0.3",
     "electron-devtools-installer": "^3.2.0",
+    "electron-is-dev": "^2.0.0",
     "formik": "^2.2.9",
     "moment": "^2.29.4",
     "react": "^18.2.0",
@@ -37,12 +39,14 @@
     "yup": "^0.32.11"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "vite",
+    "build": "tsc && vite build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "dev": "concurrently -k \"cross-env BROWSER=none yarn start\" \"yarn:electron\"",
-    "electron": "wait-on tcp:3000 && electron ."
+    "electron": "wait-on tcp:3000 && electron .",
+    "preview": "vite preview",
+    "release": "yarn build && electron-builder -c.extraMetadata.main=build/electron.ts --publish=never"
   },
   "eslintConfig": {
     "extends": [
@@ -64,12 +68,27 @@
   },
   "devDependencies": {
     "@types/react-query": "^1.2.9",
+    "@vitejs/plugin-react": "^2.2.0",
     "autoprefixer": "^10.4.13",
     "concurrently": "^7.5.0",
     "electron": "^21.2.3",
-    "electron-is-dev": "^2.0.0",
+    "electron-builder": "^23.6.0",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4",
+    "vite": "^3.2.4",
     "wait-on": "^6.0.1"
+  },
+  "build": {
+    "extends": null,
+    "appId": "com.yasharth.pizzeria",
+    "files": [
+      "dist/**/*",
+      "build/**/*",
+      "node_modules/**/*",
+      "package.json"
+    ],
+    "directories": {
+      "buildResources": "assets"
+    }
   }
 }
